src/components/generic/InputField/InputField.scss
.#{$WEBEX_COMPONENTS_CLASS_PREFIX}-input-field {
  display: flex;
  flex-direction: column;
  position: relative;

  label {
    margin-bottom: 0.25rem;
    margin-left: 0.75rem;
    font-size: 0.875rem;
    color: var(--wxc-input--label--color);
  }

  .input-error-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    color: var(--wxc-error-color);
    margin: 0.25rem 0;

    .input-error-text {
      font-size: 0.875rem;
    }

    .input-error-icon {
      margin: 0 0.5625rem 0 0.8125rem;
    }
  }

  input {
    all: unset;
    background: var(--wxc-input--normal--background);
    border: var(--wcx-input--normal--border);
    color: var(--wxc-input--normal--color);
    border-radius: 0.5rem;
    padding: 0.25rem 2.18rem 0.25rem 0.75rem;
    cursor: pointer;

    &:hover {
      background: var(--wxc-input--hover--background);
    }

    &:active {
      background: var(--wxc-input--active--background);
      border: var(--wxc-input--active--border);
      box-shadow: var(--wxc-input--active--box-shadow);
    }

    &:focus {
      background: var(--wxc-input--focus--background);
      border: var(--wxc-input--focus--border);
      color: var(--wxc-input--focus--color);
      box-shadow: var(--wxc-input--focus--box-shadow);
    }

    &:disabled {
      background: var(--wxc-input--disabled--background);
      border: var(--wxc-input--disabled--border);
      color: var(--wxc-input--disabled--color);
    }
  }

  &.error input {
    background: var(--wxc-error-input--normal--background);
    border: var(--wxc-error-input--normal--border);
    box-shadow: none;
    color: var(--wxc-text-color);

    &:hover {
      background: var(--wxc-input--hover--background);
      border: var(--wxc-error-input--normal--border);
      box-shadow: none;
    }

    &:active {
      background: var(--wxc-input--active--background);
      border: var(--wxc-error-input--normal--border);
      box-shadow: none;
    }

    &:focus {
      background: var(--wxc-input--focus--background);
      border: var(--wxc-error-input--normal--border);
      box-shadow: none;
    }
  }

  .input-field-right-icon {
    position: absolute;
    color: var(--wxc-input-icon-color);
    top: 50%;
    right: 0;
    transform: translateY(-50%);

    &:hover, &:active, &:disabled {
      background: none;
    }
  }
}

